// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ForgotPasswordScreen — snapshots > matches the initial tree 1`] = `
[
  <Pressable
    accessibilityRole="link"
    className="flex-row items-center gap-xs mb-xl"
    onPress={[Function]}
    testID="forgot-password-back-button"
  >
    <Text
      className="text-white"
      variant="body-sm"
    >
      forgotPassword.backToLogin
    </Text>
  </Pressable>,
  <Text
    className="mb-xs text-white"
    variant="h1"
  >
    forgotPassword.title
  </Text>,
  <Text
    className="mb-2xl text-white/70"
    variant="body-sm"
  >
    forgotPassword.subtitle
  </Text>,
  <TextInput
    onChangeText={[Function]}
    placeholder="forgotPassword.emailPlaceholder"
    testID="forgot-password-email-input"
    value=""
  />,
  <View
    className="mt-lg"
  >
    <Pressable
      accessibilityState={
        {
          "busy": false,
        }
      }
      onPress={[Function]}
      testID="forgot-password-submit-button"
    >
      <Text>
        forgotPassword.submitButton
      </Text>
    </Pressable>
  </View>,
]
`;

exports[`ForgotPasswordScreen — snapshots > matches the success tree 1`] = `
[
  <Pressable
    accessibilityRole="link"
    className="flex-row items-center gap-xs mb-xl"
    onPress={[Function]}
    testID="forgot-password-back-button"
  >
    <Text
      className="text-white"
      variant="body-sm"
    >
      forgotPassword.backToLogin
    </Text>
  </Pressable>,
  <Text
    className="mb-xs text-white"
    variant="h1"
  >
    forgotPassword.title
  </Text>,
  <View
    className="rounded-xl border border-white/20 bg-white/10 p-lg gap-sm items-center"
    testID="forgot-password-success-card"
  >
    <Text
      className="text-center font-semibold text-white"
      variant="body"
    >
      forgotPassword.successTitle
    </Text>
    <Text
      className="text-center text-white/70"
      variant="body-sm"
    >
      forgotPassword.successMessage
    </Text>
  </View>,
]
`;
